--- a/app/globals.css
+++ b/app/globals.css
@@ -1,10 +1,45 @@
-@import url("https://fonts.googleapis.com/css2?family=TikTok+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400&display=swap");
+@font-face {
+  font-family: 'Nohemi';
+  src: url('/assets/Nohemi-Light.woff2') format('woff2'),
+       url('/assets/Nohemi-Light.woff') format('woff');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Nohemi';
+  src: url('/assets/Nohemi-Regular.woff2') format('woff2'),
+       url('/assets/Nohemi-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Nohemi';
+  src: url('/assets/Nohemi-Medium.woff2') format('woff2'),
+       url('/assets/Nohemi-Medium.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Nohemi';
+  src: url('/assets/Nohemi-Medium.woff2') format('woff2'),
+       url('/assets/Nohemi-Medium.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  --font-family-sans: "TikTok Sans", ui-sans-serif, system-ui, sans-serif;
+  --font-family-sans: "Nohemi", ui-sans-serif, system-ui, sans-serif;
 }
 
 * {
